differentiating visited topics better, fixing extra white space in the title header (also realigning title header)

--- a/app/assets/stylesheets/desktop/topic-list.scss
+++ b/app/assets/stylesheets/desktop/topic-list.scss
@@ -42,6 +42,9 @@
   border: 1px solid $topic-list-border-color;
   @include border-radius-all(4px 4px 0 0);
   @include box-shadow(0 1px 3px rgba($black, 0.22));
+
+  a:visited {color: #888;}
+
   tbody tr {
     background-color: $white;
     &:nth-child(even) {
